# LosungenQt

./: .gitignore  CMakeLists.txt  Installer.nsi  csv_parser.cpp  csv_parser.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.h  resource.qrc  win_resource.rc
